Feature add for layouts to be opened in new tab

--- a/WebGUI/css/ots.css
+++ b/WebGUI/css/ots.css
@@ -8,21 +8,25 @@
 	}
 	
 	body {
-		background-color: rgb(0,76,151);
-		margin: 0px;
-		overflow: hidden;
+		background-color: 	rgb(0,76,151);
+		margin: 			0px;
+		overflow: 			hidden;
 	}
 	
 	a {
 		color:				white;
+		cursor: 			pointer;
+		
 		text-decoration:	none;
 		outline: 			none;  /* to stop firefox selection*/
-		-webkit-user-select: 	none; /* to stop text highlights */
-		-moz-user-select: 		none;
-		user-select: 			none;	
+		-webkit-user-select:none; /* to stop text highlights */
+		-moz-user-select: 	none;
+		user-select: 		none;	
 	}
 	
-	a:hover {text-decoration:underline;}
+	a:hover {
+		text-decoration:	underline;
+	}
 	
 	#clearDiv {
 		clear: 				both;
