--- a/WebGUI/css/CodeEditor.css
+++ b/WebGUI/css/CodeEditor.css
@@ -130,7 +130,7 @@
 			margin: 				-7px 0px 0px 13px;
 		}
 		.fileButtonContainer {
-			width: 					84px;
+			width: 					128px;
 			height:					26px;
 			margin:					8px 0 -3px 0;
 		}		
@@ -201,6 +201,9 @@
 		.fileButton:hover .fileDownloadButtonBorderChild {
 			border-top-color: 		red !important;	
 			border-bottom-color: 	red !important;	
+		}	
+		.fileUndoButton:hover {
+			color: 		red !important;			
 		}	
 		
 				
@@ -332,6 +335,13 @@
 			cursor:					pointer;
 		}
 		
+		#popUpDialog * {
+			color: black;
+		}
+		#popUpDialog a {
+			color: rgb(44, 44, 187);
+			font-size: 13px;
+		}
 		
 		
 		
