--- a/WebGUI/css/ConfigurationGUI_artdaq.css
+++ b/WebGUI/css/ConfigurationGUI_artdaq.css
@@ -174,6 +174,12 @@
 			white-space:			nowrap;
 			overflow:				hidden;
 		}
+		.node-headerTextHover {
+			z-index:				3000; /*get above arrows*/
+			border:					1px solid black;
+			background:				white;
+			padding:				5px;
+		}
 		
 		#createNodeDiv {
 			background-color: 		rgb(195, 230, 193);	
