--- a/WebGUI/css/ConfigurationGUI.css
+++ b/WebGUI/css/ConfigurationGUI.css
@@ -14,7 +14,7 @@
 		#clearDiv {
 			clear: both;
 		}
-		
+				
 		a {
 			color: rgb(44, 44, 187);
 			text-decoration: underline;
@@ -23,6 +23,8 @@
 			-webkit-user-select: 	none; /* to stop text highlights */
 			-moz-user-select: 		none;
 			user-select: 			none;
+			
+			white-space:			nowrap;
 		}
 		
 		a:hover {
@@ -62,14 +64,18 @@
 		
 
 		#SubSystemTable {
-			background-color : rgb(210, 193, 193);
+			background-color : 	rgb(210, 193, 193);
+			border:				1px solid grey /*rgb(156,94,94)*/;
 		}
 		#SubSystemTable td, #SubSystemTable th {
-			background-color : rgb(226, 216, 216);	
-			white-space: pre; /* was pre-wrap; but not sure why.. pre seems to maintain text better*/
+			background-color : 	rgb(226, 216, 216);	
+			white-space: 		pre; /* was pre-wrap; but not sure why.. pre seems to maintain text better*/
 		}
 		#SubSystemTable {
-			background-color : rgb(210, 193, 193); /*chrome does not color table unless after the td/th*/
+			background-color : 	rgb(210, 193, 193); /*chrome does not color table unless after the td/th*/
+		}
+		#SubSystemTable th {
+			background-color : 	rgb(210, 193, 193);
 		}
 		
 		.tableAddRowButton, .tableDeleteRowButton {
