--- a/WebGUI/css/ConfigurationGUI_artdaq.css
+++ b/WebGUI/css/ConfigurationGUI_artdaq.css
@@ -3,6 +3,10 @@
 			background-color: 		white; 
 		}
 		
+		b, h3, h1 { /* overwrite ConfigurationGUI.css:41 */
+			color:					rgb(92, 169, 173);
+		}
+		
 		/* make buttons and links have a hand cursor */
 		input[type="button"], button, a {
 			cursor: 				pointer;
@@ -45,7 +49,7 @@
 			-moz-transform: 		translateY(.1em);
 			transform: 				translateY(.1em);
 		}
-		
+				
 		#directoryNavToggleTop {
 			float: 					left;
 			width: 					10px;
@@ -176,7 +180,14 @@
 		}
 		.node-headerTextHover {
 			z-index:				3000; /*get above arrows*/
-			border:					1px solid black;
+			
+
+			box-shadow: 			inset rgba(255,254,255,0.6) 0 0.3em .3em,
+									inset rgba(0,0,0,0.15) 0 -0.1em .3em, /* inner shadow */
+									rgba(200, 200, 200,0.6) 0 .1em 3px,
+									rgba(200, 200, 200,0.6) 0 .1em 1px,  /* color border */
+									rgba(0,0,0,0.2) 0 .3em 5px;	/* drop shadow */
+									
 			background:				white;
 			padding:				5px;
 		}
@@ -259,6 +270,7 @@
 		    height: 			20px;
 		    border-radius: 		2px;
 		    margin: 			-10px 0 0 2px;
+		    background:			white;
 		}
 		.node-viewFclIcon:hover {
 			border: 			2px solid rgb(101, 173, 199);
