Checkpoint in artdaq config GUI progress: can now save arbitrary configurations including multinode instances; loading of multinode is currently the exploded view.

--- a/WebGUI/css/ConfigurationGUI_artdaq.css
+++ b/WebGUI/css/ConfigurationGUI_artdaq.css
@@ -103,7 +103,8 @@
 				
 		.node {
 			position:				absolute;
-			cursor:					pointer;			
+			cursor:					pointer;
+			z-index:				1000; /*get above arrows*/
 		}
 		
 		.node-box {
