--- a/WebGUI/css/ConfigurationGUI_artdaq.css
+++ b/WebGUI/css/ConfigurationGUI_artdaq.css
@@ -289,6 +289,23 @@
 			margin:				3px 0 -1px 2px;
 		}    
 
+		.editNodeDialog-table {
+			margin-bottom: 		10px; 
+			width:				400px;
+		}
+		.editNodeDialog-fieldCol {
+			text-align:			right;
+			width:				180px;
+			white-space:		nowrap;
+		}
+		.editNodeDialog-valueCol {
+			text-align:			left;
+			width:				220px;
+		}
+		#ConfigurationAPI-popUpDialog a b {
+			color: 				rgb(138, 99, 99) !important;
+		}
+		
 		.grid-plusMinusArrows {
 			position:			absolute;
 			z-index:			1001;
