--- a/WebGUI/css/ViewerRoot.css
+++ b/WebGUI/css/ViewerRoot.css
@@ -99,6 +99,8 @@
 
 	.rootObjectContainerTarget {
 		/*margin: 100px 0 -100px 0;*/ 
+		width: 					100%;
+		height:					100%;
 	}
 	
 	.rootContainerHeader {
