--- a/WebGUI/css/ConfigurationGUI_artdaq.css
+++ b/WebGUI/css/ConfigurationGUI_artdaq.css
@@ -240,6 +240,7 @@
 			position:			absolute;
 			display:			none;	
 			z-index:			1001; /* same as node anchor points */
+			background-repeat:	no-repeat;
 		}
 				
 		.node-editIcon {			
