Fixing artdaq config GUI behavior as system is created from first_demo tutorial

--- a/WebGUI/css/ConfigurationGUI_artdaq.css
+++ b/WebGUI/css/ConfigurationGUI_artdaq.css
@@ -1,6 +1,7 @@
 	
 		body {
 			background-color: 		white; 
+			overflow: 				hidden;	
 		}
 		
 		b, h3, h1 { /* overwrite ConfigurationGUI.css:41 */
