Rather good version: still problems with display of TCanvas (clear of previous one when sueprimposing on same location is buggy)

--- a/WebGUI/css/HistogramViewer.css
+++ b/WebGUI/css/HistogramViewer.css
@@ -1,3 +1,9 @@
-.controlButtons {
-		 background-color : #ffffff ; !important
-                }
+.controlButtons      {
+		      background-color : #ffffff ; !important
+                     }
+.histogram-leaf-icon {
+                      background-image: url(../images/histogram.gif) !important;
+                     }
+.x-tree-icon-custom  {
+                      background-image: url(../images/folder.gif)    !important;
+                     }
