--- a/WebGUI/css/ConfigurationGUI_artdaq.css
+++ b/WebGUI/css/ConfigurationGUI_artdaq.css
@@ -182,6 +182,10 @@
 			
 		}
 		.node-headerTextHover {
+			-webkit-user-select: 	auto;
+			-moz-user-select: 		auto;
+			user-select:			auto;
+						
 			z-index:				3000; /*get above arrows*/
 			
 
