--- a/WebGUI/css/MacroMaker.css
+++ b/WebGUI/css/MacroMaker.css
@@ -61,7 +61,7 @@ body {
     /* use fermilab gray 45 */
     background-color: #A7A8AA;
     
-    color:black !important; 
+    color:black; 
     /* do not remove background-image: url(/WebPath/images/windowContentImages/macromaker-bg-texture.jpg); */
     overflow: auto;
     font-family: Sans-serif;
@@ -133,6 +133,7 @@ li a:hover:not(.active) {
     border: 2px solid black;
     border-radius: 5px;	
     margin: 10px;
+    overflow: auto;
 }	
 
 #footer {
@@ -398,216 +399,227 @@ textarea
 }
 
 .popup{
-    width:400px;
-    height:320px;
-    background-color: #002540;
-    z-index:9;
-    position: fixed;
-    top: 40%;
-    left: 50%;
-    margin-top: -100px;
-    margin-left: -200px;
-    opacity:0.9;
-    border-radius:5px;
-    padding:6px;
-    color:#c4e9f5;
-    border: 2px solid #c4e9f5;
+    width:					400px;
+    height:					320px;
+    background-color: 		#002540;
+    z-index:				9;
+    position: 				fixed;
+    top: 					40%;
+    left: 					50%;
+    margin-top: 			-100px;
+    margin-left: 			-200px;
+    opacity:				0.9;
+    border-radius:			5px;
+    padding:				6px;
+    color:					#c4e9f5 !important;
+    border: 				2px solid #c4e9f5;
+}
+.popup *, .smallPopup * {
+	color:					#c4e9f5;
+}
+.popup button, 
+.popup textarea, 
+.popup input, 
+.smallPopup button, 
+.smallPopup textarea, 
+.smallPopup input {
+	color:					black;
 }
 
 .popupEdit{
-    top: 20% !important;
-    left: 0 !important;
-    margin-top: -30px;
-    margin-left: 10%;
-    margin-right: 10%;
-    background-color: #002540;
-    z-index:9;
-    position: fixed;
-    opacity:0.9;
-    border-radius:5px;
-    padding:6px;
-    color:#c4e9f5;
-    border: 2px solid #c4e9f5;
-    width:78%;
-    overflow:auto;	
+    top: 					20% !important;
+    left: 					0 !important;
+    margin-top: 			-30px;
+    margin-left:			10%;
+    margin-right: 			10%;
+    background-color: 		#002540;
+    z-index:				9;
+    position: 				fixed;
+    opacity:				0.9;
+    border-radius:			5px;
+    padding:				6px;
+    color:					#c4e9f5;
+    border: 				2px solid #c4e9f5;
+    width:					78%;
+    overflow:				auto;	
 }
 
 .JStextarea {
-    width:28%;
-    height: 1.2em;
+    width:					28%;
+    height: 				1.2em;
 }
 
 #macroNameEdit {
-    width: 90%;
-    height:1.2em;
+    width: 					90%;
+    height:					1.2em;
 }
 #macroNotesEdit {
-    width: 90%;
-    height: 20%;
+    width: 					90%;
+    height: 				20%;
 }
 #macroName {
-    width: 360px;
+    width: 					360px;
 }
 #macroNotes {
-    width: 360px;
-    height:106px;
+    width: 					360px;
+    height:					106px;
 }
 
 .smallPopup{
-    width:225px;
-    height:112px;
-    background-color: #002540;
-    z-index:9;
-    position: fixed;
-    top: 30%;
-    left: 50%;
-    margin-left: -110px;
-    opacity:0.9;
-    border-radius:5px;
-    padding:6px;
-    color:#c4e9f5;
-    border: 2px solid #c4e9f5;
-    display:none;
+    width:					225px;
+    height:					112px;
+    background-color: 		#002540;
+    z-index:				9;
+    position: 				fixed;
+    top: 					30%;
+    left: 					50%;
+    margin-left: 			-110px;
+    opacity:				0.9;
+    border-radius:			5px;
+    padding:				6px;
+    color:					#c4e9f5;
+    border: 				2px solid #c4e9f5;
+    display:				none;
 }
 
 
 #popupSaveMacro{
-    display:none;
+    display:				none;
 }
 
 #popupEditMacro{
-    display:none;
+    display:				none;
 }
 
 #macroSequenceEdit {
-    overflow:scroll;
-    overflow-x: hidden;
-    overflow-y: auto;	
-    padding:5px;
-    height: 30%;
-    margin-bottom: 5px;
+    overflow:				scroll;
+    overflow-x: 			hidden;
+    overflow-y: 			auto;	
+    padding:				5px;
+    height: 				30%;
+    margin-bottom: 			5px;
 }
 
 lable textarea {
-    vertical-align: middle;
+    vertical-align: 		middle;
 }
 
 #makeMacroPublic {
-    padding: 4px;
-    text-align: center;
-    width: 100%;
-    display: none;
+    padding: 				4px;
+    text-align: 			center;
+    width: 					100%;
+    display: 				none;
 }
 
 #makeMacroLSBF {
-    padding: 4px;
-    text-align: center;
-    width: 100%;
+    padding: 				4px;
+    text-align: 			center;
+    width: 					100%;
 }
 
 button, input[type=submit] {
-    cursor:pointer;
+    cursor:					pointer;
 }
 #lsbFirst, #macroLsbFirst{
-    float: left;
+    float: 					left;
 }
 
 .context-menu {
-    display: none;
-    position: absolute;
-    z-index: 10;
-    padding: 5px 0;
-    width: 250px;
+    display: 				none;
+    position: 				absolute;
+    z-index: 				10;
+    padding: 				5px 0;
+    width: 					250px;
     /* background-color: #c4e9f5;
      */
-     background-color: white;
-    border: solid 1px #dfdfdf;
-    box-shadow: 1px 1px 2px #cfcfcf;
+     background-color: 		white;
+    border: 				solid 1px #dfdfdf;
+    box-shadow: 			1px 1px 2px #cfcfcf;
 }
 
 .context-menu--active {
-    display: block;
+    display: 				block;
 }
 
 .context-menu__items {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+    list-style: 			none;
+    margin: 				0;
+    padding: 				0;
 }
 
 .context-menu__item {
-    display: block;
-    margin-bottom: 2px;
+    display: 				block;
+    margin-bottom: 			2px;
 }
 
 .context-menu__link {
-    display: block;
-    padding: 4px 12px;
-    color: #001626;
-    text-decoration: none;
-    text-align: left;
+    display: 				block;
+    padding: 				4px 12px;
+    color: 					#001626;
+    text-decoration:		none;
+    text-align: 			left;
 }
 
 .context-menu__link:hover {
-    color: #fff;
-    background-color: #002a52;
+    color: 					#fff;
+    background-color: 		#002a52;
 }
 
 #macroRunningProgress {
-    position: relative;
-    width: 80%;
-    margin: 0 auto; 
-    height: 30px;
-    background-color: #c4e9f5;
-    border-radius:5px;
-    border: 2px solid #c4e9f5;
+    position: 				relative;
+    width: 					80%;
+    margin: 				0 auto; 
+    height: 				30px;
+    background-color: 		#c4e9f5;
+    border-radius:			5px;
+    border: 				2px solid #c4e9f5;
 }
 
 #macroRunningBar {
-    position: absolute;
-    width: 0%;
-    height: 100%;
-    background: repeating-linear-gradient(
-      45deg,
-      #002540,
-      #002540 10px,
-      #993333 10px,
-      #993333 20px
-    );
-    border-radius:5px;
+    position: 				absolute;
+    width: 					0%;
+    height: 				100%;
+    background: 			repeating-linear-gradient(
+							  45deg,
+							  #002540,
+							  #002540 10px,
+							  #993333 10px,
+							  #993333 20px
+							);
+    border-radius:			5px;
 }
 
 #macroRunningPercentage {
-    margin: 0 auto; 
-    font-weight: bold;
-    padding-top: 5px;
+    margin: 				0 auto; 
+    font-weight: 			bold;
+    padding-top: 			5px;
 }
 
 #infoButton {
-      top: 4px; 
-      right: 7px;
-      position: absolute;
-      cursor:pointer;
+      top: 					4px; 
+      right: 				7px;
+      position: 			absolute;
+      cursor:				pointer;
 }
 
 #refreshButton {
-      top: 7px; 
-      right: 37px;
-      position: absolute;
-      cursor:pointer;
+      top: 					7px; 
+      right: 				37px;
+      position: 			absolute;
+      cursor:				pointer;
 }
 
 #popupNameVariableYesButton {
-    display:none;
+    display:				none;
 }
 
 #macroEditContainer{
-    height:95%;
+    height:					95%;
 }
 
 .multiselectbox .mySelect .optionhighlighted
 {
-        background:				rgb(207, 226, 244);
+	background:				rgb(207, 226, 244);
 }
 
 
@@ -619,30 +631,30 @@ button, input[type=submit] {
 
 @media screen and (max-height: 528px){
     #progressBarOuter{
-        position:relative !important;
+        position:			relative !important;
     }
     #progressBarInner{
-        position:absolute !important;
-        bottom:0 !important;
+        position:			absolute !important;
+        bottom:				0 !important;
     }
 }
 
 @media only screen and (min-width: 1215px){
     .center{
-        width:50%;
-        margin: 0 auto; 
+        width:				50%;
+        margin: 			0 auto; 
     }
 }
 
 @media only screen and (min-width: 819px)and(max-width: 1215px) {
     .center{
-        width:75%;
-        margin: 0 auto; 
+        width:				75%;
+        margin: 			0 auto; 
     }
 }
 @media only screen and (max-width: 550px) {
     html {
-        overflow:auto;
+        overflow:			auto;
     }
 }
 
