--- a/WebGUI/css/SlowControlsDashboard.css
+++ b/WebGUI/css/SlowControlsDashboard.css
@@ -24,6 +24,75 @@
 		clear: 						both;
 	}
 
+	button {
+		cursor: 					pointer;
+		
+		background: 				#2a81d7;
+		background: 				-moz-linear-gradient(0% 100% 90deg, #206bcb, #3e9ee5);
+		background: 				-webkit-gradient(linear, 0% 0%, 0% 100%, from(#3e9ee5), to(#206bcb));
+		border-top: 				1px solid #2a73a6;
+		border-right: 				1px solid #165899;
+		border-bottom: 				1px solid #07428f;
+		border-left: 				1px solid #165899;
+		-moz-box-shadow:			inset 0 1px 0 0 #62b1e9;
+		-webkit-box-shadow: 		inset 0 1px 0 0 #62b1e9;
+		
+		color: 						#fff;
+		font: 						normal 11px/1 "lucida grande", sans-serif;
+		padding: 					5px 5px 7px 5px;
+		margin:						5px;
+		border-radius: 				9px;
+		text-align: 				center;
+		text-shadow: 				0 -1px 1px #1d62ab;
+		width: 						100%;
+		-webkit-background-clip: 	padding-box;
+	}
+	
+	button:hover {
+		background-color: 			#52a8e8;
+		background-image: 			-webkit-gradient(linear, left top, left bottom, color-stop(0%, #52a8e8), color-stop(100%, #377ad0));
+		background-image: 			-webkit-linear-gradient(top, #52a8e8, #377ad0);
+		background-image: 			-moz-linear-gradient(top, #52a8e8, #377ad0);
+		background-image: 			linear-gradient(top, #52a8e8, #377ad0);
+		border-top: 				1px solid #4081af;
+		border-right: 				1px solid #2e69a3;
+		border-bottom: 				1px solid #20559a;
+		border-left: 				1px solid #2e69a3;
+		-webkit-box-shadow: 		inset 0 1px 0 0 #72b9eb, 0 1px 2px 0 #b3b3b3;
+		box-shadow: 				inset 0 1px 0 0 #72b9eb, 0 1px 2px 0 #b3b3b3;
+		text-shadow: 				0 -1px 1px #3275bc;
+	}
+
+	button:active {
+		background: 				#3282d3;
+		border: 					1px solid #154c8c;
+		border-bottom: 				1px solid #0e408e;
+		-moz-box-shadow:			inset 0 0 6px 3px #1657b5, 0 1px 0 0 #fff;
+		-webkit-box-shadow: 		inset 0 0 6px 3px #1657b5, 0 1px 0 0 #fff;
+		text-shadow: 				0 -1px 1px #2361a4;
+	}
+
+	button:focus {
+		outline:					0; /*to stop blue active outline*/
+	}
+
+	button[disabled],
+	button[disabled]:hover,
+	button[disabled]:active {
+		background: 				#999;
+		background: 				-webkit-gradient(linear, 0% 0%, 0% 100%, from(#dadada), to(#f3f3f3));
+		border-top: 				1px solid #c5c5c5;
+		border-right: 				1px solid #cecece;
+		border-bottom: 				1px solid #d9d9d9;
+		border-left: 				1px solid #cecece;
+		color: 						#8f8f8f;
+		box-shadow: 				none;
+		-moz-box-shadow: 			none;
+		-webkit-box-shadow: 		none;
+		cursor: 					not-allowed;
+		text-shadow: 				0 -1px 1px #ebebeb;
+	}
+	
 	#mainBlockContainer {
 		z-index: 					4;
 		transition: 				background-color .25s;
