--- a/WebGUI/css/SlowControlsDashboard.css
+++ b/WebGUI/css/SlowControlsDashboard.css
@@ -49,6 +49,9 @@
 		margin: 					34px -3px -45px -21px;
 		cursor: 					pointer;
 	}
+	.widgetOtherEditIcon {		
+		margin: 					-24px -3px -25px -1px !important;
+	}
 	.widgetEditIcon:hover, #preloadImage-treeEditIconHover {
 		background-image: 			url(/WebPath/images/windowContentImages/ConfigurationGUI-pencilEditHover.png);		
 	}
