--- a/WebGUI/css/SlowControlsDashboard.css
+++ b/WebGUI/css/SlowControlsDashboard.css
@@ -270,7 +270,9 @@
 		cursor: 					default !important;
 	}
 
-	.popup{
+	.popup {
+		font-family: 				"Lucida Sans Unicode", "Lucida Grande", Verdana, Arial, Helvetica, sans-serif;
+	
 		width:						400px;
 		height:						320px;
 		background-color: 			#002540;
@@ -287,8 +289,22 @@
 		border: 					2px solid #c4e9f5;
 	}
 
-	#popupSaveControlsPage{
+	#popupSaveControlsPage {
 		display:					none;
+	}
+	
+	#popupSaveControlsPage h2 {
+		margin-top:					5px;
+	}
+	#popupSaveControlsPage p {
+		margin-bottom:				4px;
+	}
+	#popupSaveControlsPage button {
+		width:						100px;	
+	}
+	#popupSaveControlsPage #makeControlsPagePublic {
+		margin-top:					10px;
+		margin-bottom:				20px;
 	}
 
 	.cursor-default {
