--- a/WebGUI/css/SystemStatus.css
+++ b/WebGUI/css/SystemStatus.css
@@ -140,6 +140,10 @@ h1, h2, h3 {
 	border:					1px solid gray;
 }
 
+#appStatusDiv table tr:nth-child(even) td {
+	background-color: 		rgb(187, 192, 197);
+}
+
 #appStatusDiv td {
 	white-space:			nowrap;
 	padding:				0 10px 0 10px;
